--- a/packages/react-shop-create/templates/generator/layout.hbs
+++ b/packages/react-shop-create/templates/generator/layout.hbs
@@ -7,10 +7,14 @@ import { NextAuthProvider } from 'react-shop-auth';
 import { auth } from '@/auth.config';
 {{/if}}
 {{#if useStoreFront}}
-import { StoreFront } from '@/modules/store/StoreFront'
+import { StoreFront } from '@/modules/store/StoreFront';
+{{/if}}
+{{#if seed}}
+import { fetchList } from '@/modules/store/actions';
+import type { Region } from 'react-shop-types';
 {{/if}}
 {{#if (useTailwind uiLib)}}
-import './globals.css'
+import './globals.css';
 {{/if}}
 
 const roboto = Roboto({
@@ -38,13 +42,25 @@ export default async function RootLayout({
   const authSession = await auth();
   {{/if}}
 
+  {{#if seed}}
+  const { data: regions } = await fetchList<Region>('regions');
+  {{/if}}
+
   return (
-    <Shop className={roboto.className}>
-      {{#if auth}} <NextAuthProvider session={authSession}> {{/if}}
-        {{#if useStoreFront}} <StoreFront> {{/if}}
-            {children}
-        {{#if useStoreFront}} </StoreFront> {{/if}}
-      {{#if auth}} </NextAuthProvider> {{/if}}
+    <Shop 
+      className={roboto.className}
+      {{#if seed}}
+      regions={regions}
+      {{/if}}
+      {{#if (useMaterial uiLib)}}
+      meta={<meta name="emotion-insertion-point" content="" />}
+      {{/if}}
+    >
+    {{#if auth}} <NextAuthProvider session={authSession}> {{/if}}
+      {{#if useStoreFront}} <StoreFront> {{/if}}
+        {children}
+      {{#if useStoreFront}} </StoreFront> {{/if}}
+    {{#if auth}} </NextAuthProvider> {{/if}}
     </Shop>
   );
 }
