--- a/documentation/src/pages/index.module.css
+++ b/documentation/src/pages/index.module.css
@@ -4,10 +4,10 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
+  margin: auto;
 }
 
 @media screen and (max-width: 996px) {
@@ -20,4 +20,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 20px;
 }
